# tempest

./: .gitignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  README.md  TODO.md  mix.exs
.github/workflows/: elixir.yml
assets/css/: app.css  base.css  reset.css  tokens.css  utilities.css
assets/js/: app.js
conf/: .env.example  Caddyfile  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: tasks.md
docs/design/: index.html  layout.txt
docs/reference/: README.md  account-management.md  account-migration.md  admin-operations.md  architecture.md  blobs.md  budget.md  car-drisl.md  deployment-observability.md  deployment.md  doc-viewer.md  email-delivery.md  endpoints.md  identity-handles.md  identity-troubleshooting.md  interop-testing.md  lexicon-schemas.md  migration-lifecycle.md  oauth-private-key-jwt.md  oauth.md  pds-compatibility.md  public-stats-dashboard.md  record-apis.md  release.md  repo-core.md  security-oauth.md  storage-sqlite.md  sync-firehose.md  tokens.md  xrpc.md
docs/specs/: README.md  account-management.md  accounts-auth.md  admin-operations.md  admin-xrpc.md  architecture.md  blobs.md  deployment-observability.md  doc-viewer.md  external-relay-appview-verification.md  hurl-smoke-tests.md  identity-handles.md  interop-testing.md  lexicon-schemas.md  migration-lifecycle.md  pds-compatibility.md  (+10 more)
lib/: tempest.ex  tempest_web.ex
scripts/: ar.py  pyproject.toml
scripts/src/tempest_py/: __init__.py  ar.py  main.py
test/: test_helper.exs
(+355 files in other folders)
