[project]
name = "tempest-scripts"
version = "0.1.0"
description = "Operational scripts for Tempest"
requires-python = ">=3.11"
dependencies = [
  "argon2-cffi>=23.1.0",
  "httpx>=0.27.0",
]

[project.scripts]
tempest = "tempest_py.main:main"
tempest-admin-hash = "tempest_py.ar:main"
tempest-migrate = "tempest_py.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tempest_py"]
